--- a/package.json
+++ b/package.json
@@ -59,13 +59,13 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5"
   }
 }
