--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,7 @@
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
-    "indentSize": 2,
+    "indentWidth": 2,
     "lineWidth": 100
   },
   "linter": {
@@ -20,6 +20,12 @@
       "recommended": true
     }
   },
+  "overrides": [
+    {
+      "includes": ["components/ui/**"],
+      "linter": { "enabled": false }
+    }
+  ],
   "javascript": {
     "formatter": {
       "quoteStyle": "double"
