fix(render): usar --no-frozen-lockfile para evitar erro de versão

--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
     buildCommand: |
       corepack enable
       corepack prepare pnpm@latest --activate
-      pnpm install --frozen-lockfile
+      pnpm install --no-frozen-lockfile
       pnpm build
 
     startCommand: |
