refactor: improve table layout and tooltip integration across navigation and dashboard components

--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,7 @@ services:
       - key: NODE_VERSION
         value: "22"
 
-      # Configuração de produção (seguro commitar)
+      # Configuração de produção
       - key: NODE_ENV
         value: production
 
