feature: Next.js 15 + Supabase Template

--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,8 @@
     "useIgnoreFile": false
   },
   "files": {
-    "ignoreUnknown": false
+    "ignoreUnknown": false,
+    "experimentalScannerIgnores": [".next", "node_modules", "*.log", "pnpm-lock.yaml"]
   },
   "formatter": {
     "enabled": true,
