--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "typecheck:edge": "tsc -p tsconfig.edge.json --noEmit",
     "typecheck:ci": "tsc -p tsconfig.ci.json --noEmit",
+    "setup": "./scripts/setup.sh",
+    "check": "pnpm lint && pnpm typecheck",
     "db:types:local": "npx -y supabase gen types typescript --local -s public > lib/database.types.ts",
     "db:types:linked": "npx -y supabase gen types typescript --linked -s public > lib/database.types.ts",
+    "db:types:apps": "npx -y supabase gen types typescript --linked --schema apps > lib/apps-scrape.types.ts",
+    "db:link": "npx supabase link",
+    "db:pull": "npx supabase migration fetch --linked",
+    "db:push": "npx supabase db push --linked",
     "db:reset:local": "npx -y supabase db reset --force",
     "db:sync-types:local": "pnpm db:reset:local && pnpm db:types:local"
   },
