--- a/biome.json
+++ b/biome.json
@@ -1,13 +1,21 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.1.4/schema.json",
   "vcs": {
-    "enabled": false,
+    "enabled": true,
     "clientKind": "git",
-    "useIgnoreFile": false
+    "useIgnoreFile": true
   },
   "files": {
     "ignoreUnknown": false,
-    "experimentalScannerIgnores": [".next", "node_modules", "*.log", "pnpm-lock.yaml"]
+    "experimentalScannerIgnores": [
+      ".next",
+      "node_modules",
+      "dist",
+      "build",
+      "coverage",
+      "*.log",
+      "pnpm-lock.yaml"
+    ]
   },
   "formatter": {
     "enabled": true,
