--- a/package.json
+++ b/package.json
@@ -21,11 +21,6 @@
     "db:sync-types:local": "pnpm db:reset:local && pnpm db:types:local"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/modifiers": "^9.0.0",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -55,49 +50,39 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tabler/icons-react": "^3.34.1",
-    "@tanstack/react-query": "^5.85.3",
-    "@tanstack/react-table": "^8.21.3",
-    "@tanstack/react-virtual": "^3.13.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
-    "diff": "^8.0.2",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
     "next": "latest",
-    "pino": "^9.0.0",
     "next-themes": "^0.4.6",
+    "pino": "^9.0.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.1",
-    "react-diff-viewer": "^3.1.1",
-    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^3.0.4",
-    "react-window": "^1.8.11",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
-    "vaul": "^1.1.2",
-    "zod": "^4.0.17",
-    "zustand": "^5.0.7"
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.4",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.2.1",
+    "@types/pino": "^7.0.5",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "pino-pretty": "^11.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
-    "pino-pretty": "^11.0.0",
-    "@types/pino": "^7.0.5",
     "typescript": "^5.9.2"
   },
   "packageManager": "pnpm@10.14.0"
