refactor(render.yaml, app/layout.tsx, components): enhance structure and improve imports
- Removed the `pnpm prune --prod` command from render.yaml to streamline the build process.
- Adjusted import statements in layout.tsx for better organization and clarity.
- Consolidated import statements in site-footer.tsx for improved readability.
- Refactored rank-tracker/header.tsx to enhance structure, ensuring consistent formatting and maintainability across the component.
- Updated health check endpoint in render.yaml to use a lightweight static route, optimizing deployment.

--- a/render.yaml
+++ b/render.yaml
@@ -17,7 +17,6 @@ services:
     startCommand: |
       corepack enable
       corepack prepare pnpm@10.14.0 --activate
-      pnpm prune --prod
       pnpm run start
 
     # Variáveis de ambiente
@@ -42,5 +41,5 @@ services:
       - key: NEXT_PUBLIC_SUPABASE_ANON_KEY
         sync: false
 
-    # Health check endpoint
-    healthCheckPath: /
+    # Health check endpoint (use a lightweight static route to avoid SSR on deploy)
+    healthCheckPath: /robots.txt
