feat(auth): integrate Clerk for authentication and enhance app structure
- Added Clerk configuration to .env.example for authentication setup.
- Updated package.json to include Clerk dependencies for user management.
- Refactored app layout to wrap the application in ClerkProvider for authentication context.
- Enhanced loading states and UI components for better user experience during authentication.
- Removed deprecated loading.tsx file to streamline the codebase.
- Improved rank-tracker components for better organization and maintainability.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
-NEXT_PUBLIC_SUPABASE_URL=value
-NEXT_PUBLIC_SUPABASE_ANON_KEY=value
+# ============================================
+# Clerk Configuration
+# Get from: https://dashboard.clerk.com
+# ============================================
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YOUR_KEY_HERE
+CLERK_SECRET_KEY=sk_test_YOUR_SECRET_HERE
+
+# Optional: Custom auth pages
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL=/
+NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/
+
+# ============================================
+# Supabase Configuration
+# ============================================
+NEXT_PUBLIC_SUPABASE_URL=https://YOUR_PROJECT.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=YOUR_ANON_KEY_HERE
