refactor: remove DEPLOY.md and update render.yaml for streamlined deployment
- Deleted the outdated DEPLOY.md file containing deployment instructions.
- Updated startCommand in render.yaml to use a direct Node.js command for improved deployment efficiency.
- Reorganized imports in rank-tracker components for better clarity and maintainability.

--- a/render.yaml
+++ b/render.yaml
@@ -14,10 +14,7 @@ services:
       pnpm install --frozen-lockfile --prefer-offline --prod=false
       pnpm run build
 
-    startCommand: |
-      corepack enable
-      corepack prepare pnpm@10.14.0 --activate
-      pnpm run start
+    startCommand: node .next/standalone/server.js
 
     # Variáveis de ambiente
     envVars:
