refactor(middleware.ts, package.json, render.yaml): enhance routing and deployment configuration
- Added "/robots.txt" and "/api/health" to public routes in middleware.ts for improved accessibility.
- Updated package.json to include a standalone build command and adjusted start commands for better deployment practices.
- Modified render.yaml to streamline the build process with a new build command and updated health check endpoint to a dedicated API route.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "dev": "next dev --turbo",
     "dev:3001": "next dev --turbo -p 3001",
     "build": "next build",
-    "start": "next start",
-    "start:3001": "next start -p 3001",
+    "build:standalone": "next build && cp -r public .next/standalone/ 2>/dev/null || true && cp -r .next/static .next/standalone/.next/ 2>/dev/null || true",
+    "start": "node .next/standalone/server.js",
+    "start:3001": "PORT=3001 node .next/standalone/server.js",
     "lint": "biome check --write .",
     "format": "biome format --write .",
     "typecheck": "tsc -p tsconfig.json --noEmit",
