feat(dependencies): add new packages and update package management
- Added "dotenv" for environment variable management to package.json.
- Included "sharp" for image processing capabilities.
- Introduced "tsx" for TypeScript support in JSX files.
- Updated pnpm-lock.yaml to reflect new dependencies and their versions.
- Enhanced screenshot comparison logic in screenshot-comparison.ts to improve image change detection with a new threshold for similar images.

--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
     "@tabler/icons-react": "^3.34.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -79,10 +78,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.4",
+    "@supabase/supabase-js": "latest",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "dotenv": "^17.2.1",
     "pino-pretty": "^11.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
