--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/ssr": "latest",
+    "@supabase/supabase-js": "latest",
     "@tabler/icons-react": "^3.34.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -78,7 +79,6 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.4",
-    "@supabase/supabase-js": "latest",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.9",
@@ -86,8 +86,10 @@
     "dotenv": "^17.2.1",
     "pino-pretty": "^11.0.0",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.3",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
   "packageManager": "pnpm@10.14.0"
